# deep_classifier

./: .gitignore  dvc.yaml  params.yaml  scores.json  setup.cfg  setup.py  template.py
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-11-10-00-07-55/train/: events.out.tfevents.1668019078.LAPTOP-FH4Q72CM.3024.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-11-10-00-07-55/validation/: events.out.tfevents.1668022034.LAPTOP-FH4Q72CM.3024.1.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-11-10-02-01-16/train/: events.out.tfevents.1668025878.LAPTOP-FH4Q72CM.3912.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-11-10-03-00-44/train/: events.out.tfevents.1668029447.LAPTOP-FH4Q72CM.22120.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-11-10-03-07-42/train/: events.out.tfevents.1668029864.LAPTOP-FH4Q72CM.24300.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-11-10-03-07-42/validation/: events.out.tfevents.1668032915.LAPTOP-FH4Q72CM.24300.1.v2
configs/: config.yaml
prediction_service/: app.py
research/: configbox.ipynb  ensure.ipynb  st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05_trials.ipynb
research/mlflow_dir/: example.py
src/deepClassifier/components/: data_ingestion.py  evaluation.py  prepare_base_model.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/pipeline/: stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
tests/unit/: test_utils.py
(+2 files in other folders)
