[metadata]

license = MIT
license_file = license


# Classifier means that on which programming language it should work on and its version also the operating system.
classifier = 
    Programming language :: Python :: 3.8
    Operating System :: OS Independent      # every time we should create the OS independent packages.


# Adding more options (if the project is having any other dependency then we shoul add here.)
[option]
install_requires = 
    ensure==1.0.2       # Using the third praty library and 1.0.2 version.  


python_requires = >=3.7     # here for this package minimum 3.7 version of python is required or else it will not work.


# Adding extra development options
[option.extras_require]
testing =
    pytest>=7.1.3   # PyTest will help to run the Unit-Test and Integration-Test if we are doing.
    mypy>=0.971     # MyPy is used to check if there is any king of typing error or not.
    flake8>=5.0.4   # Flake8 will help to check if there is any mistake done my coder eg given extra space or anything.
    tox>=3.25.1     # Tox will help to run the package in different working env and test the app locally.
    black>=22.8.0   # Black is used for formating the application in perfect python format.


# About package data
[option.package_data]
deepClassifier = py.typed


# Flake8 will help to check if there is any mistake done my coder eg given extra space or anything.
[flake8]
max-line-length = 160   
exclude = __init__.py   # excluding the enpty file to be checked 